# hs-perceptron

./: .gitignore  package.yaml  perceptron.cabal
app/: Main.hs
src/: Perceptron.hs
