cabal-version: 1.12
name:           perceptron
version:        0.1.0.0
author:         Eugene Rossokha
maintainer:     arjaz@protonmail.com
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/arjaz/perceptron

library
  exposed-modules:
      Perceptron
  other-modules:
      Paths_perceptron
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable perceptron-exe
  main-is: Main.hs
  other-modules:
      Paths_perceptron
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , perceptron
  default-language: Haskell2010
